# guile

./: .gitignore  ARCHITECTURE.md  README.md  __init__.py  _app.py  guile_internals.md  publish.yml  pyproject.toml  state.py  test_guile.py  test_smoke.py  ui.py
.github/workflows/: publish.yml
docs/: CNAME  examples.html  guile_cheatsheet.html  guile_howto.html  guile_reference.html  index.html
examples/: 01_counter.py  01b_simple_layout.py  02_todo.py  03_settings.py  04_geo_data.py  04_mesonet_map.py  04b_mesonet_interactive.py  05_data_tools.py  05_weather_explorer.py  06_soil_water.py  06_soils_lab.py  07_fao56_dual_kc.py  07_ks_mesonet.py  08_dynamic_table.py  08_ks_mesonet.py  08_soil_water_retention.py  09_dynamic_table.py  09_upload_weather_data.py  10_canopeo.py  11_map_draw.py  canopeo.py  counter.py  howto_structure_example.py  map_draw.py  mesonet_interactive.py  mesonet_map.py  settings.py  simple_layout.py  soil_water_retention.py  soils_lab.py  todo.py  upload_weather_data.py  weather_example.csv  weather_explorer.py
guile/: __init__.py  _app.py  _app_win32.py  _nodes.py  _package.py  _template.py  state.py  ui.py
guile.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
